# monitoring-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  extension.toml  llms-full.txt  llms.txt  pyproject.toml  pyproject.toml.bak  run_server.py  start.ps1  start.ps1.bak.20260508_202256
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/monitoring-tools/: grafana-integration.md
src/monitoring_mcp/: __init__.py  __main__.py  ai.py  auth.py  config.py  mcp_server.bak  mcp_server.py  mcp_server.py.bak  server.py  transport.py  web.py
src/monitoring_mcp/models/: __init__.py  common.py
src/monitoring_mcp/tools/: __init__.py  correlation_tool.py  grafana_tool.py  loki_tool.py  prometheus_tool.py  status_tool.py
tests/unit/: test_mcp_server.py
web_sota/: index.html  package-lock.json  package.json  package_20260227_021033.json.bak  start.ps1  vite.config.ts
web_sota/src/: App.tsx
web_sota/src/components/layout/: sidebar.tsx
web_sota/src/pages/: chat.tsx  control.tsx  dashboard.tsx  help.tsx  settings.tsx  tools.tsx
